[package]
name = "zkproof"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "4.0.0-rc.1", features = ["digest", "rand_core"] }
custom_derive = "0.1.7"
lazy_static = "1.4.0"
newtype_derive = "0.1.6"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.6"
